<resources>
    <string name="app_name">KeepItAll</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="item_properties" />
    <string name="date_of_purchase" />
    <string name="item_make" />
    <string name="item_model" />
    <string name="estimated_value" />
    <string name="description" />
    <string name="tags" />
    <string name="need_an_account">Need an account? <font color='#01C6DB'>Register now!</font></string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="change_logo_of_the_item">CHANGE LOGO OF THE ITEM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>